# google-resumable-media-python

./: .repo-metadata.json  CHANGELOG.md  README.rst  REVIEW.md  noxfile.py  owlbot.py  pyproject.toml  pytest.ini  setup.py  synth.metadata
.github/: CODEOWNERS  blunderbuss.yml  sync-repo-settings.yaml
.github/workflows/: unittest.yml
.kokoro/: build-docs.sh  build.sh  docs.cfg  publish-docs.sh  release.cfg  release.sh  requirements.txt  test-samples.sh
.kokoro/continuous/: common.cfg
.kokoro/docs/: common.cfg
.kokoro/presubmit/: google-resumable-media-python.cfg  presubmit.cfg
.kokoro/release/: common.cfg
.librarian/: state.yaml
appveyor/: requirements.txt
docs/: conf.py
docs/_build/doctrees/: README.doctree  changelog.doctree  environment.pickle  index.doctree
docs/_build/html/: .buildinfo  README.html  changelog.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/latest/: .buildinfo  genindex.html  google.resumable_media.common.html  google.resumable_media.requests.download.html  google.resumable_media.requests.html  google.resumable_media.requests.upload.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs_build/: conf.py  requirements.txt
google/_async_resumable_media/: _download.py  _helpers.py  _upload.py
google/_async_resumable_media/requests/: __init__.py  download.py  upload.py
google/async_resumable_media/: __init__.py  _download.py  _helpers.py  _upload.py
google/async_resumable_media/requests/: __init__.py  _helpers.py  (+3 more)
google/resumable_media/: _download.py  _helpers.py  _upload.py  common.py
gooresmed/: upload.py
scripts/: build_docs.sh  rewrite_index_rst.py  rewrite_requests_pkg_rst.py
testing/: constraints-3.6.txt
tests/system/: test_upload.py
tests/unit/: test__download.py  test__helpers.py  test__upload.py  test_upload.py
tests_async/unit/: test__download.py  test__helpers.py  test__upload.py  test_common.py
(+26 files in other folders)
