# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "google-resumable-media"
version = "2.7.2"
authors = [
  { name = "Google Cloud Platform", email = "googleapis-publisher@google.com" },
]
license = { text = "Apache 2.0" }
requires-python = ">= 3.7"
description = "Utilities for Google Media Downloads and Resumable Uploads"
readme = "README.rst"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet",
]
dependencies = ["google-crc32c >= 1.0, < 2.0dev"]

[project.urls]
Repository = "https://github.com/googleapis/google-resumable-media-python"

[project.optional-dependencies]
requests = ["requests >= 2.18.0, < 3.0.0dev"]
aiohttp = ["aiohttp >= 3.6.2, < 4.0.0dev", "google-auth >= 1.22.0, < 2.0dev"]

[tool.setuptools.packages.find]
exclude = ["tests*", "docs*"]
